
[package]
authors    = { workspace = true }
edition    = { workspace = true }
homepage   = { workspace = true }
license    = { workspace = true }
name       = "pallet-grandpa-finality-verifier"
repository = "https://github.com/t3rn/t3rn/"
version    = "1.5.0-rc.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec            = { workspace = true, package = "parity-scale-codec" }
finality-grandpa = { version = "0.16", default-features = false, features = [ "derive-codec" ] }
hash-db          = { version = "0.16.0", default-features = false }
log              = { workspace = true }
num-traits       = { workspace = true }
scale-info       = { version = "2", default-features = false, features = [ "derive" ] }
serde            = { workspace = true, optional = true }

# Substrate Dependencies
frame-support = { workspace = true }
frame-system  = { workspace = true }

sp-core              = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-io                = { workspace = true }
sp-runtime           = { workspace = true }
sp-state-machine     = { workspace = true }
sp-std               = { workspace = true }
sp-trie              = { workspace = true }

# These are the testing dependencies that we are now selecting via future flag
ed25519-dalek    = { workspace = true, default-features = true, optional = true }
hex              = { package = "rustc-hex", version = "2.1.0", optional = true }
hex-literal      = { version = "0.4.1", optional = true }
pallet-balances  = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.2.0", optional = true }
pallet-sudo      = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.2.0", optional = true }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.2.0", optional = true }

t3rn-abi        = { path = "../../types/abi", features = [ "runtime" ], default-features = false }
t3rn-primitives = { path = "../../primitives", default-features = false }

[features]
default = [ "std" ]
runtime-benchmarks = [  ]
std = [
  "codec/std",
  "hash-db/std",
  "num-traits/std",
  "ed25519-dalek/std",
  "hex/std",
  "finality-grandpa/std",
  "scale-info/std",

  "frame-support/std",
  "frame-system/std",

  "sp-runtime/std",
  "sp-core/std",
  "sp-state-machine/std",
  "sp-trie/std",
  "sp-std/std",
  "sp-io/std",
  "sp-consensus-grandpa/std",

  "pallet-balances/std",
  "pallet-sudo/std",
  "pallet-timestamp/std",

  "log/std",
  "serde/std",

  "t3rn-primitives/std",
  "t3rn-abi/std",
]
testing = [ "ed25519-dalek", "pallet-balances", "pallet-sudo", "pallet-timestamp", "hex", "hex-literal" ]
