[package]
authors     = [ "Maciej Baj <maciej@maciejbaj.com>" ]
description = "A crate that hosts a common definitions that are relevant for the escrow-gateway."
edition     = "2018"
homepage    = "https://t3rn.io"
license     = "Apache-2.0"
name        = "gateway-escrow-engine"
repository  = "https://github.com/t3rn/t3rn/"
version     = "0.3.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
# This crate should not rely on any of the frame primitives.
codec           = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [ "derive" ] }
frame-support   = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
frame-system    = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
pallet-sudo     = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }
primitive-types = { version = "0.9.0", features = [ 'codec' ], default-features = false }
sp-std          = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8', default-features = false }

[dev-dependencies]
substrate-test-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }

[features]
default = [ "std" ]
std     = [ 'codec/std', 'frame-support/std', 'frame-system/std', 'pallet-sudo/std', 'primitive-types/std', 'sp-std/std' ]
