[package]
authors = ['Maciej Baj <https://github.com/MaciejBaj>']
description = 'Gateway for multi-phase contracts execution secured by escrow accounts'
edition = '2018'
homepage = 'https://github.com/t3rn/t3rn'
license = 'Apache 2.0'
name = 'escrow-gateway'
repository = 'https://github.com/t3rn/t3rn.git'
version = '2.0.0-rc5'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.escrow-gateway-primitives]
default-features = false
path = 'common'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.contracts]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
package = 'pallet-contracts'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.contracts-rpc-runtime-api]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
package = 'pallet-contracts-rpc-runtime-api'
version = '0.8.0-rc5'
tag = 'v2.0.0-rc5'

[dependencies.contracts-primitives]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
package = 'pallet-contracts-primitives'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

#[dev-dependencies]
#assert_matches = "1.3.0"
#hex-literal = "0.2.1"
#sp-core = "2.0.0-rc5"
#sp-io = "2.0.0-rc5"
#sp-runtime = "2.0.0-rc5"
#pallet-balances = "2.0.0-rc5"
#pallet-timestamp = "2.0.0-rc5"
#pallet-randomness-collective-flip = "2.0.0-rc5"
#pretty_assertions = "0.6.1"
#wat = "1.0"


[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

#[dev-dependencies.pallet-timestamp]
#default-features = false
#package = 'pallet-timestamp-rc5'
#path = '../local/timestamp-rc5'
#version = '2.0.0-rc5'

[dev-dependencies.pallet-timestamp]
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dev-dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dev-dependencies.rspec]
git = 'https://github.com/rust-rspec/rspec.git'
version = '1.0.0-beta.4'

[dev-dependencies.anyhow]
version = '*'

[dev-dependencies]
wat = { version = "1.0", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'contracts/std',
    'contracts-primitives/std',
    'sp-core/std',
    'sp-api/std',
#    'escrow-gateway-primitives/std',
]
