[package]
name = "gateway-rpc"
version = "3.0.0"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Gateway Client RPC"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
codec = { package = "parity-scale-codec", version = "2.0.0" }
futures = { version = "0.3.1", features = ["compat"] }
jsonrpc-core = { version = "15.1.0" }
jsonrpc-pubsub = "15.1.0"
jsonrpc-derive = "15.1.0"
jsonrpc-core-client = "15.1.0"
serde = { version = "1.0.123", features = ["derive"] }

log = "0.4.8"
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
serde_json = "1.0.41"
sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sp-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sp-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sc-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sc-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
hash-db = { version = "0.15.2", default-features = false }
parking_lot = "0.11.1"
lazy_static = { version = "1.4.0", optional = true }
sp-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }

[dev-dependencies]
assert_matches = "1.3.0"
futures01 = { package = "futures", version = "0.1.29" }
lazy_static = "1.4.0"
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
tokio = "0.1.22"
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }

[features]
test-helpers = ["lazy_static"]
