[package]
description = "Gateway Client RPC"
edition     = "2018"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "gateway-rpc"
readme      = "README.md"
version     = "3.0.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec               = { package = "parity-scale-codec", version = "2.0.0" }
futures             = { version = "0.3.1", features = [ "compat" ] }
jsonrpc-core        = { version = "15.1.0" }
jsonrpc-core-client = "15.1.0"
jsonrpc-derive      = "15.1.0"
jsonrpc-pubsub      = "15.1.0"
sc-client-api       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-rpc              = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-rpc-api          = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
serde               = { version = "1.0", features = [ "derive" ] }
sp-api              = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }

hash-db             = { version = "0.15.2", default-features = false }
lazy_static         = { version = "1.4.0", optional = true }
log                 = "0.4.8"
parking_lot         = "0.11.1"
sc-block-builder    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-chain-spec       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-executor         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-keystore         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-tracing          = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
serde_json          = "1.0.41"
sp-blockchain       = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-core             = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-keystore         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-offchain         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-rpc              = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-runtime          = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-session          = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-state-machine    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-tracing          = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-utils            = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-version          = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }

[dev-dependencies]
assert_matches                = "1.3.0"
futures01                     = { package = "futures", version = "0.1.29" }
lazy_static                   = "1.4.0"
sc-cli                        = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-network                    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-transaction-pool           = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-io                         = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
tokio                         = "0.1.22"

[features]
test-helpers = [ "lazy_static" ]
