[package]
authors = ['t3rn <team@t3rn.io']
edition = '2018'
homepage = 'https://t3rn.io'
license = 'Unlicense'
name = 'gateway-runtime'
repository = 'https://github.com/t3rn/t3rn'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder={ git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10' }

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
hex-literal= {optional = true, version = '0.3.1'}

# Substrate dependencies
frame-benchmarking = {default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
frame-executive = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
frame-support = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
frame-system = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
frame-system-benchmarking = {default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
frame-system-rpc-runtime-api = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
pallet-aura = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
pallet-balances = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
pallet-grandpa = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
pallet-randomness-collective-flip = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
pallet-sudo = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
pallet-timestamp = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
pallet-transaction-payment = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
pallet-transaction-payment-rpc-runtime-api = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
sp-api = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
sp-block-builder = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
sp-consensus-aura = {default-features = false, version = '0.9.0', git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
sp-core = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
sp-inherents = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
sp-offchain = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
sp-runtime = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
sp-session = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
sp-std = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
sp-transaction-pool = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}
sp-version = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.10'}

# local dependencies
pallet-runtime-gateway = {default-features = false, path = "../pallets/runtime-gateway"}
versatile-wasm = {default-features = false, path = "../../vm/versatile-wasm" }
t3rn-primitives = {default-features = false, path = "../../circuit/primitives" }
pallet-bridge-messages = {default-features = false, path = "../../bridges/modules/messages" }
bp-messages = {default-features = false, path = "../../bridges/primitives/messages" }
bp-runtime = {default-features = false, path = "../../bridges/primitives/runtime" }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-bridge-messages/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'pallet-runtime-gateway/std',
    'versatile-wasm/std',
    't3rn-primitives/std',
    'bp-messages/std',
    'bp-runtime/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
