[package]
name = "circuit-cli"
version = "0.1.0"
authors = ["t3rn devs"]
edition = "2021"

[dependencies]
log = "0.4.8"
structopt = "0.3.25"
codec = { package = "parity-scale-codec", version = "2.3.1" }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13", optional = true }

cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.13" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.13" }

circuit-service = { path = "../service", default-features = false }
circuit-standalone-runtime = { path = "../../runtime/standalone" }
circuit-parachain-runtime = { path = "../../runtime/parachain" }
t3rn-primitives = { path = "../../primitives" }

[features]
default = ["with-standalone-runtime"]
try-runtime = [
    "try-runtime-cli",
]
with-standalone-runtime = [
    "circuit-service/with-standalone-runtime",
]
with-parachain-runtime = [
    "circuit-service/with-parachain-runtime",
]
